--- a/main.html
+++ b/main.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="main.css"/>
+    <title>toDoList</title>
 </head>
 <body>
-    <div id="time">
+    <div class="time">
+        <h1>00:00</h1>
     </div>
-    <script src="./main.js"></script>
+    <form class="form">
+        <input type="text" placeholder="What is your name?">
+    </form>
+    <h4 class="info"></h4>
+    <form class="toDoForm">
+        <input type="text" placeholder="Write a to do">
+    </form>
+    <ul class="toDoList">
+    </ul>
+
+    <script src="clock.js"></script>
+    <script src="information.js"></script>
+    <script src="todo.js" ></script>
+    
 </body>
 </html>
