searchbox 아직 안만듬

--- a/main.html
+++ b/main.html
@@ -9,8 +9,12 @@
     <!-- 상단 -->
     <div class="top"> 
         <!--상단 좌측 searchbox-->
-        <form class="textBoxSearch"> 
-        </form>
+        <div>
+            <input class="searchBox" type="text">
+        </div>
+        <div class="geoInfo">
+
+        </div>
     </div>
     <!--중단-->
     <div>
@@ -36,6 +40,7 @@
     <script src="information.js"></script>
     <script src="todo.js" ></script>
     <script src="background.js"></script>
+    <script src="weather.js"></script>
     
 </body>
 </html>
